Upload function code rewrite

--- a/template.yaml
+++ b/template.yaml
@@ -51,8 +51,7 @@ Resources:
       Policies:
       - DynamoDBCrudPolicy:
           TableName: !Ref UsersTable
-      - S3CrudPolicy: 
-          BucketName: sam-crud-csv-bucket
+      - AmazonS3FullAccess
   ListUsersFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -108,7 +107,7 @@ Resources:
         Users:
           Type: Api
           Properties:
-            Path: /users/{username}/{date}
+            Path: /users/{username}/{id}
             Method: delete
       Policies:
         - DynamoDBCrudPolicy:
