function code update

--- a/template-pk-sk.yaml
+++ b/template-pk-sk.yaml
@@ -119,10 +119,18 @@ Resources:
         -
           AttributeName: "id"
           AttributeType: "S"
+        -
+          AttributeName: "username"
+          AttributeType: "S"
+
       KeySchema:
         -
           AttributeName: "id"
           KeyType: "HASH"
+        -
+          AttributeName: "username"
+          KeyType: "RANGE"
+
       ProvisionedThroughput:
         ReadCapacityUnits: "5"
         WriteCapacityUnits: "5"
